🐛 Fix test Physics - Zone sécurité relativiste ✅
🔧 Correction du test qui échouait:
- 'Limites relativistes - Approche de c'
- x=0.98 → x=0.95 (zone valide vs limite sécurité)
- Ajout test explicite pour zone interdite

🧮 Explication technique:
- SAFETY_MARGIN = 0.02 protège contre calculs instables
- Point x=0.98, t=1 exactement à la limite (rejeté)
- Point x=0.95, t=1 dans zone valide (vitesse ~0.95c)

✅ Tests maintenant: 21/21 passent (100%)
🛡️ Non-régression garantie pour module Physics

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "python3 -m http.server 8000",
     "dev": "python3 -m http.server 8000",
-    "serve": "python3 -m http.server"
+    "serve": "python3 -m http.server",
+    "test": "echo '🧮 Tests unitaires disponibles sur http://localhost:8000/test-runner.html' && python3 -m http.server 8000",
+    "test:physics": "echo '🧮 Lancer le serveur puis ouvrir http://localhost:8000/test-runner.html'"
   },
   "repository": {
     "type": "git",
