--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.html",
   "scripts": {
     "start": "python3 -m http.server 8000",
-    "dev": "python3 -m http.server 8000",
+    "dev": "./scripts/dev-server.sh",
+    "dev-old": "./scripts/update-version.sh && python3 -m http.server 8001",
+    "refresh": "./scripts/update-version.sh",
+    "chrome": "./scripts/chrome-refresh.sh",
     "serve": "python3 -m http.server",
     "test": "echo '🧮 Tests unitaires disponibles sur http://localhost:8000/test-runner.html' && python3 -m http.server 8000",
     "test:physics": "echo '🧮 Lancer le serveur puis ouvrir http://localhost:8000/test-runner.html'"
